# libre-iptv

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dev Spec.html  LICENSE  README.md  SECURITY.md  coverage.json  debug_playlist.py  iptv-player-linux.spec  iptv-player-mac.spec  iptv-player.spec  main.py  main_v2.py  pyproject.toml  test_out.txt
.github/workflows/: ci.yml  release.yml
src/: platform.py
src/core/: cache.py  parental.py  settings.py  source_manager.py  vlc_manager.py  xtream_client.py
src/i18n/: __init__.py  translator.py
src/models/: channel.py  profile.py  programme.py
src/parser/: m3u.py  xmltv.py
src/profiles/: manager.py
src/services/: epg_service.py  menu_builder.py  playlist_service.py  profile_controller.py
src/ui/: about_dialog.py  app_settings.py  channel_list.py  control_bar.py  grid_player_widget.py  loading_overlay.py  logo_delegate.py  logo_loader.py  main_window.py  parental_panel.py  pin_dialog.py  player_widget.py  profile_bar.py  profile_chooser.py  toast.py  welcome_dialog.py
src/v2/: __init__.py  nav_rail.py  navigator.py  themes.py
tests/: test_epg_flow.py  test_hardcoded_strings.py  test_integration.py  test_main_shutdown.py  test_main_vlc_guard.py  test_platform.py  test_translator.py  test_widget_retranslation.py
tests/core/: test_cache.py  test_parental.py  test_settings.py  test_source_manager.py  test_vlc_manager.py  test_xtream_client.py
tests/e2e/: test_parental_controls.py
tests/models/: test_channel.py  test_profile.py  test_profile_epg_url.py  test_programme.py
(+77 files in other folders)
